<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".PinCodeActivity">

    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_1"/>
    <TextView
        android:id="@+id/title"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/createpin"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_width="155dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ellipse1"
            android:src="@drawable/ellipseoff"
            android:layout_width="18dp"
            android:layout_height="18dp"/>
        <ImageView
            android:id="@+id/ellipse2"
            android:layout_marginStart="25dp"
            android:src="@drawable/ellipseoff"
            android:layout_width="18dp"
            android:layout_height="18dp"/>
        <ImageView
            android:id="@+id/ellipse3"
            android:layout_marginStart="25dp"
            android:src="@drawable/ellipseoff"
            android:layout_width="18dp"
            android:layout_height="18dp"/>
        <ImageView
            android:id="@+id/ellipse4"
            android:layout_marginStart="25dp"
            android:src="@drawable/ellipseoff"
            android:layout_width="18dp"
            android:layout_height="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/fiencode"
        android:layout_width="300dp"
        android:layout_height="245dp">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/num1"
                android:fontFamily="@font/montserrat_light"
                android:onClick="Pin"
                android:text="@string/one"
                android:textSize="28sp"
                android:background="@drawable/button_style5"
                android:layout_width="72dp"
                android:layout_height="58dp"/>
            <Button
                android:id="@+id/num2"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/montserrat_light"
                android:onClick="Pin"
                android:text="@string/two"
                android:textSize="28sp"
                android:background="@drawable/button_style5"
                android:layout_width="72dp"
                android:layout_height="58dp"/>
            <Button
                android:id="@+id/num3"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/three"
                android:onClick="Pin"
                android:textSize="28sp"
                android:background="@drawable/button_style5"
                android:layout_width="72dp"
                android:layout_height="58dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/num4"
                android:fontFamily="@font/montserrat_light"
                android:onClick="Pin"
                android:text="@string/four"
                android:textSize="28sp"
                android:background="@drawable/button_style5"
                android:layout_width="72dp"
                android:layout_height="58dp"/>
            <Button
                android:id="@+id/num5"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/montserrat_light"
                android:onClick="Pin"
                android:text="@string/five"
                android:textSize="28sp"
                android:background="@drawable/button_style5"
                android:layout_width="72dp"
                android:layout_height="58dp"/>
            <Button
                android:id="@+id/num6"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/six"
                android:onClick="Pin"
                android:textSize="28sp"
                android:background="@drawable/button_style5"
                android:layout_width="72dp"
                android:layout_height="58dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/num7"
                android:fontFamily="@font/montserrat_light"
                android:onClick="Pin"
                android:text="@string/seven"
                android:textSize="28sp"
                android:background="@drawable/button_style5"
                android:layout_width="72dp"
                android:layout_height="58dp"/>
            <Button
                android:id="@+id/num8"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/montserrat_light"
                android:onClick="Pin"
                android:text="@string/eight"
                android:textSize="28sp"
                android:background="@drawable/button_style5"
                android:layout_width="72dp"
                android:layout_height="58dp"/>
            <Button
                android:id="@+id/num9"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/nine"
                android:onClick="Pin"
                android:textSize="28sp"
                android:background="@drawable/button_style5"
                android:layout_width="72dp"
                android:layout_height="58dp"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnExit"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_style1"
        android:paddingVertical="10dp"
        android:text="@string/out"
        android:onClick="Exit"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_bold"/>

</LinearLayout>