<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_marginTop="135dp"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/smarthouse"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:fontFamily="@font/montserrat_bold"/>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="145dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/fieldlogin"
            android:padding="5dp"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:fontFamily="@font/montserrat_bold"/>

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/pass" />

                <EditText
                    android:id="@+id/passwordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_bold"/>

        </LinearLayout>
        <Button
            android:onClick="SignIn"
            android:layout_width="245dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_style"
            android:paddingVertical="10dp"
            android:text="@string/enter"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"/>
        <Button
            android:onClick="SignUp"
            android:layout_width="245dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_style1"
            android:paddingVertical="10dp"
            android:text="@string/reg"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"/>
    </LinearLayout>
</LinearLayout>